extends GridContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	hide()


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_coastal_tab_pressed():
	pass # Replace with function body.


func _on_shallows_tab_pressed():
	pass # Replace with function body.


func _on_oceanic_tab_pressed():
	pass # Replace with function body.


func _on_abyssal_tab_pressed():
	show()


func _on_volcanic_tab_pressed():
	pass # Replace with function body.


func _on_glacial_tab_pressed():
	pass # Replace with function body.
